0.5.1
 * Better compatibility with some compilers and CFLAGS
   Thanks to Daniel Richard G. <skunk AT iSKUNK DOT ORG>
 * Support key bindings for ALT_SHIFT, CTRL_ALT_SHIFT, and CTRL_SHIFT
 * Auto-detect gtk_*_resize_grip in dlopen() mode
 * Fix a potential bug for HOTKEY_SCROLL_ONE_PAGE_*
 * Strict minimum font size to 1
 * Hide DEFAULT_ENCODING, PROGRAM_NAME, and PROGRAM_VERSION
 * Make everything GTK+ 3.4.0 compatible

0.5.1~pre3
 * New hotkey definition method, support ALT and SHIFT, closes #2.
   The new behavior breaks old hotkey definitions.
   If you have old conffiles, please update them to latest format.
 * Support TAB_NEW_PATH_EQUAL_OLD when open new evilvte window, closes #3.
 * Support HOTKEY_SCROLL_ONE_PAGE_*, closes #4.
 * Some distributions backports gtk_*_resize_grip to GTK+ 2.x.
   Try export CFLAGS="-DGTK_HAS_RESIZE_GRIP" and rebuild evilvte
 * Drop old CTRL_ALT option
 * Deprecate HOTKEY_TAB_GO_TO_NUMBER, use ALT_NUMBER_GO_TO_TAB_NUMBER or
   CTRL_NUMBER_GO_TO_TAB_NUMBER instead

0.5.1~pre2
 * Support TAB_NEW_TAB_AT_TAB_ONE, let new tab always be the first tab
   Thanks to shenfeng <https://github.com/shenfeng>
 * Make close button smaller
 * Improve resizing behavior with "-VteTerminal-inner-border" property

0.5.1~pre1

 * Temporary workaround for "-VteTerminal-inner-border" property
 * Mouse clicking can also turn off urgency hint now

0.5.0

 The "One binary to rule them all!" Release

 * Fix a bug for -e option
 * Fix a bug for input method menu
 * New configure option: --with-gtk=2+3|3+2
   The binary will not link to VTE nor GTK+, thus can support GTK+ 2.x and 3.x
   at the same time. It still depends on VTE runtime, of course.
   Use --2 or --3 command line options to choose the version of GTK+.
   If evilvte segfaults with --3 option, please try export USE_ACCESSIBLE=0 or
   USE_ACCESSIBLE=1.
 * Drop codes with VTE version < 0.17.1

0.5.0~pre1
 * Sync COLOR_STYLE: ZENBURN with xterm
   Thanks to Artur Dryomov <me AT ming13 DOT ru>