@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-bcc0dd541e0baf9d4412b9d8370adbbe81ae1d8e  15676 ChangeLog
+bc03b777cc81679a8837f9c57136de2643a1f9fa  15750 ChangeLog
 1c2d983c7261aac7f3acb847892b9600de8c4307   2889 Makefile
 7103c2ecddea29134185e30fbf7ba2daf3f11c08  10264 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -21,23 +21,23 @@ eae1b0fb4deb0adbed4237bfbf7cea7022efa909   2373 misc/64.png
 83055c532a24e778aabd9b5aa86cf9ee3d1f17a9    353 misc/evilvte.xml
 c5ccf87f60b8039f34e8914edd866cce5564a3e4   1707 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
-7791174abdfca422a6c3765e08ff9983de6f9c1d  10345 src/config.h
-f9e7c56c6597b4c9a57012e9726b1f439f5f7615 162630 src/evilvte.c
+d72666ae9ce5c16c12e70f079c151707d207c83c  10426 src/config.h
+e4b02babe8f72b10c988384e7fc8bc9da71e8dc1 163840 src/evilvte.c
 165ba6dfab07c1c824277184f97383e26fa7799a  15631 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk9xpKMACgkQdEpXpumNYVl7ggCaAyS4L+dDQJmZNezc+KESLnYh
-cSMAn0piIJ55Quoed0cb0BQOF3lP6+gIiQIcBAEBCgAGBQJPcaSjAAoJELc3H0m+
-i6gZ3pwQAJvuKlG4qsbwU/mTEpjDKn0cwBNFbIPLk1sxVwtp+APvU3uwSeFgCC/6
-Cl0SAqrJV1GXYw+VDJlsmvgCN7oMtWa7lZEyRYOq2dTnELUYjMpRMTWlKpERpFx/
-5buWAwofuHR2KRDhgfZ+XEGET68qVWKNIEeYJidAolqrYp8YUTdrVuL51GXt+dQD
-LzUSa5HEUC2Mz5XH+NUX7UzktJUxGP2VqU4gZdYPKN/APl+/vnlFHTWtVCglOaFH
-lucaZgwXOBtkbaqpY5O0NkegrhwoDQ8xvfUKl3cDbGS5j2zt3c6BcL1ZX7C4tFSs
-Yxo+EVaxuNCFYtB+iisB9sFoHcz+LOC1B1UAI8OkBAq0n+y6xT/mJ3WGbT0lwkMV
-1G+mjg5Kc2fEE/iMrNDYEeVkgpBaMyVFwFG9l6g9xzNL0H5RBLlpszcxlyzDFBwc
-wgaeW+eQ5cVB+X4/qitIa9bpBpqIyYAn6PqfJO/EEkpyndSHF1aFFSscMZmCWT3p
-qLrPSY8Oa2JqDi6J4ENfUjajGx3ksLmpoiC5v0HUBA1OQMpM3eM7jRMyOyg8QQ2F
-JWZyeDkgX+c7rHWCNLpob213dJScBcwHwSfBQ/X/e8j8IREm27pv8ppaNolp4eEs
-zw6Jmj8CypMmPZJTAI090cvD3PD/sfpC8nEZqNdJK43hGtqs7VYh
-=tETV
+iEYEARECAAYFAk+6P0sACgkQdEpXpumNYVk7fgCfY9r4cqvve3YO+tOhS/7aO+B7
+4e0An3GaZqeXVOeQnj9OzgEKWf4TnxP1iQIcBAEBCgAGBQJPuj9LAAoJELc3H0m+
+i6gZRNcQAJFN9fU2zx2emQ+kM65PgjApRZNa8HOZL0QQ7PkBKP7cU50rWnMTdXtX
+6ZhjqXfgHDUZSGQYMiaf7047sT4+uZva7FxhwLg/EN03/X4ZajF/tcN2Px5eoNUw
+P5GQHmVXbxoiTPAypVC6VVhZQvSZucPrTGoa5wXSe8Cmjsrpc8tN6CzuNkl6BX7u
+wLl/x5+i0Ijw3r4YAlTTlOgA2+YNcDGrb2yfGzPMLwcJa+Es0Ih+smb4U0YQQc5n
+PXQf11ee0n1zStVK7SxrPm36WZMY6y0QSkvjtYbx9nNZp0NR0GYm1y3gz9E3y2x+
+oSriV96OqGwKsApRPtGxSyO5FYc65TCaYosqDnDHcD+MxEImRqAjxT7T5TqD6eGm
+PrlSQLH0rduKacTu2KOOtu7k8sX4u91kCmE9bDasSfyqjMx5OgYPyclJltGnWQz4
+KE1tnwBbHLh9uQpIvIvO8IyGVaY2wYC6P46Ptn25aX26PNriFSRlOwoJ2VJPntp3
+8cPhht8cDpGWTdfbIPDF9TffSs1jvT2RnmRoj2vzLqH8qd1aDW5a1lLp/8Q92/BS
+3BgLDykyyTVBCrXbBk8zpiJ64v4OgS50SPzYEaAejqpRxqoeKKMJYiX1xUOxpkKC
+5b6ppL+Lj+DNWMKQlax6Tpn39Ucix6q0YFQ++swColkBNoTQXsD0
+=pu2z
 -----END PGP SIGNATURE-----
