@@ -52,13 +52,15 @@
 #define IBEAM     VTE_CURSOR_SHAPE_IBEAM
 #define UNDERLINE VTE_CURSOR_SHAPE_UNDERLINE
 
-#define LINUX        1
-#define RXVT         2
-#define TANGO        3
-#define VTE_FIXED    4
-#define XTERM        5
-#define ZENBURN_DARK 6
-#define ZENBURN      7
+#define LINUX           1
+#define RXVT            2
+#define TANGO           3
+#define VTE_FIXED       4
+#define XTERM           5
+#define ZENBURN_DARK    6
+#define ZENBURN         7
+#define SOLARIZED_DARK  8
+#define SOLARIZED_LIGHT 9
 
 #define LEFT   0
 #define RIGHT  1
@@ -1220,6 +1222,42 @@ const GdkColor color_style[16] = {
   { 0, 0xecec, 0x9393, 0xd3d3 },
   { 0, 0x9393, 0xe0e0, 0xe3e3 },
   { 0, 0xffff, 0xffff, 0xffff }
+#endif
+#if COLOR_STYLE == SOLARIZED_DARK
+  { 0, 0x0707, 0x3636, 0x4242 },
+  { 0, 0xdcdc, 0x3232, 0x2f2f },
+  { 0, 0x8585, 0x9999, 0x0000 },
+  { 0, 0xb5b5, 0x8989, 0x0000 },
+  { 0, 0x2626, 0x8b8b, 0xd2d2 },
+  { 0, 0xd3d3, 0x3636, 0x8282 },
+  { 0, 0x2a2a, 0xa1a1, 0x9898 },
+  { 0, 0xeeee, 0xe8e8, 0xd5d5 },
+  { 0, 0x0000, 0x2b2b, 0x3636 },
+  { 0, 0xcbcb, 0x4b4b, 0x1616 },
+  { 0, 0x5858, 0x6e6e, 0x7575 },
+  { 0, 0x6565, 0x7b7b, 0x8383 },
+  { 0, 0x8383, 0x9494, 0x9696 },
+  { 0, 0x6c6c, 0x7171, 0xc4c4 },
+  { 0, 0x9393, 0xa1a1, 0xa1a1 },
+  { 0, 0xfdfd, 0xf6f6, 0xe3e3 }
+#endif
+#if COLOR_STYLE == SOLARIZED_LIGHT
+  { 0, 0xeeee, 0xe8e8, 0xd5d5 },
+  { 0, 0xdcdc, 0x3232, 0x2f2f },
+  { 0, 0x8585, 0x9999, 0x0000 },
+  { 0, 0xb5b5, 0x8989, 0x0000 },
+  { 0, 0x2626, 0x8b8b, 0xd2d2 },
+  { 0, 0xd3d3, 0x3636, 0x8282 },
+  { 0, 0x2a2a, 0xa1a1, 0x9898 },
+  { 0, 0x0707, 0x3636, 0x4242 },
+  { 0, 0xfdfd, 0xf6f6, 0xe3e3 },
+  { 0, 0xcbcb, 0x4b4b, 0x1616 },
+  { 0, 0x9393, 0xa1a1, 0xa1a1 },
+  { 0, 0x8383, 0x9494, 0x9696 },
+  { 0, 0x6565, 0x7b7b, 0x8383 },
+  { 0, 0x6c6c, 0x7171, 0xc4c4 },
+  { 0, 0x5858, 0x6e6e, 0x7575 },
+  { 0, 0x0000, 0x2b2b, 0x3636 }
 #endif
 };
 #endif
